syntax = "proto3";

package Protocol;

import "enum.proto";
import "struct.proto";

//스킬 카드 사용 요청
message C2B_SkillRequest {
    string prefabId = 1;
    string ownerId = 2; //유저 ID
    int32 roomId = 3; // 룸 ID
}

//스킬 카드 사용 응답
message C2B_SkillResponse {
    bool isSuccess = 1;
    string cardId = 2; //카드 사용 요청 -> 서버로부터 응답을 받으면: 패에서 카드 제거거거
}

//스킬 카드 사용 알림
message B2C_UseCardNotification {
    string prefabId = 1;
    PosInfo posInfo = 2;
}    

//카드 추가 알림
message B2C_AddCard {
    CardData cardData = 1;
}

//초기 카드 데이터 알림
message B2C_InitCardData {
    repeated CardData cardData = 1;
}